--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -19,7 +19,7 @@ development:
         # operation on failure. (default: 1)
         # retry_interval: 1
   # Configure Mongoid specific options. (optional)
-  options:
+  # options:
     # Includes the root model name in json serialization. (default: false)
     # include_root_in_json: false
 
