--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -45,13 +45,13 @@ test:
           mode: primary
         max_pool_size: 1
 
-<% if ENV['OPENSHIFT_MONGODB_DB_HOST'] %>
+
 production:
   sessions:
     default:
-      database: <%= ENV['OPENSHIFT_APP_NAME'] %>
+      database: pmn2015
       hosts:
-        - <%="#{ENV['OPENSHIFT_MONGODB_DB_HOST']}:#{ENV['OPENSHIFT_MONGODB_DB_PORT']}" %>
-      username: <%= ENV['OPENSHIFT_MONGODB_DB_USERNAME'] %>
-      password: <%= ENV['OPENSHIFT_MONGODB_DB_PASSWORD'] %>
-<% end %>
+        - 127.3.65.130:27017
+      username: admin
+      password: YbNQsrt87ytB
+
