--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -30,7 +30,7 @@ development:
     # inheritance. (default: false)
     # preload_models: false
 
-    # Protect id and type from mass assignment. (default: true) 
+    # Protect id and type from mass assignment. (default: true)
     # protect_sensitive_fields: true
 
     # Raise an error when performing a #find and the document is not found.
@@ -59,8 +59,7 @@ test:
         max_retries: 1
         retry_interval: 0
 
-production:   
+production:
   sessions:
     default:
-        uri: <%= ENV['MONGOLAB_URI'] %>
-
+        uri: <%= ENV['MONGODB_URI'] %>
